<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detailuser.UserDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/bgAppbar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorOnPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cs_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar">

                <View
                    android:id="@+id/rectangle"
                    android:layout_marginTop="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/rectangle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/img_user_photo_detail"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/rectangle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle"
                    tools:src="@tools:sample/avatars"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_favorite"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/favorite"
                    android:textColor="@color/favorite"
                    android:textStyle="bold"
                    app:cornerRadius="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rectangle" />

                <TextView
                    android:id="@+id/tv_user_name_detail"
                    style="@style/DetailMargin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/textContentDark"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_user_photo_detail"
                    tools:text="@string/example_name" />

                <TextView
                    android:id="@+id/tv_user_username_detail"
                    style="@style/DetailMargin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/textContent"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_name_detail"
                    tools:text="@string/example_username" />

                <TextView
                    android:id="@+id/tv_bio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/textContent"
                    app:layout_constraintBottom_toTopOf="@+id/tv_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_username_detail"
                    tools:text="@string/bio" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/DetailMargin.TextContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:textColor="@color/textContent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bio"
                    tools:text="@string/example_location" />

                <TextView
                    android:id="@+id/tv_company"
                    style="@style/DetailMargin.TextContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:drawableStart="@drawable/ic_baseline_domain_24"
                    android:textColor="@color/textContent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_location"
                    tools:text="@string/example_company" />

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:drawableStart="@drawable/ic_baseline_folder_open_24"
                    android:drawablePadding="4dp"
                    android:textColor="@color/textContent"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company"
                    tools:text="@string/example_repository" />

                <TextView
                    android:id="@+id/tv_repository_text"
                    android:layout_width="0dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="203dp"
                    android:text="@string/example_repository"
                    android:textColor="@color/textContent"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_repository"
                    app:layout_constraintTop_toBottomOf="@+id/tv_repository"
                    app:layout_constraintStart_toEndOf="@id/tv_repository"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:title="App"
                android:background="@color/colorPrimary"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/bgAppbar"
            app:tabIndicatorColor="@color/tabLayout"
            app:tabIndicatorHeight="3dp"
            android:layout_gravity="bottom"
            app:tabSelectedTextColor="@color/tabLayout"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:tabTextColor="@color/textContent" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        tools:visibility="visible"/>

    <include
        android:id="@+id/main_info"
        layout="@layout/main_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>